rewrite bp/score